Fixed icons and text elements alignments.

--- a/css/photo-images.css
+++ b/css/photo-images.css
@@ -4,12 +4,12 @@
 .img-photo-sm { width: 40px; height: 40px; }
 .img-photo-xs { width: 30px; height: 30px; }
 
-[class*="img-photo"] { vertical-align: middle; }
-[class*="img-photo"]:not(img) { text-align: center; white-space: nowrap; background-color: rgba(0,0,0,.08); overflow: hidden; display: inline-block; }
-[class*="img-photo"]:not(.bordered) { border-width: 0; }
-[class*="img-photo"]:not(img):not(.img-photo-xs) { padding: 5px; }
+[class*="img-photo"] { vertical-align: middle; position: relative; }
+[class*="img-photo"]:not(img) { background-color: rgba(0,0,0,.08); overflow: hidden; display: inline-block; }
 
-.img-photo-lg:not(img) { font-size: 24px; line-height: 70px; }
-.img-photo:not(img) { font-size: 16px; line-height: 40px; }
-.img-photo-sm:not(img) { font-size: 14px; line-height: 30px; }
-.img-photo-xs:not(img) { font-size: 12px; line-height: 20px; padding: 5px 2px; }
+[class*="img-photo"]:not(img) > span,[class*="img-photo"]:not(img) > i { text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); }
+
+.img-photo-lg:not(img) { font-size: 24px; }
+.img-photo:not(img) { font-size: 16px; }
+.img-photo-sm:not(img) { font-size: 14px; }
+.img-photo-xs:not(img) { font-size: 12px; }
